--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 
 server.port=8081
+eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
+spring.application.name=order-service
